2011-11-01  Simon Hausmann  <simon.hausmann@nokia.com>

        [Qt][WK2] Fix valgrind error about uninitialized variable
        https://bugs.webkit.org/show_bug.cgi?id=71273

        Reviewed by Kenneth Christiansen.

        * MiniBrowser/qt/MiniBrowserApplication.cpp:
        (MiniBrowserApplication::notify): Initialize isPrimary.

2011-10-31  Adam Roben  <aroben@apple.com>

        Make Leaks Viewer less strict when parsing leaks-related output from NRWT/ORWT

        Fixes <http://webkit.org/b/71258> REGRESSION (r98639): Leaks Viewer doesn't show recent
        leaky builds

        Reviewed by Anders Carlsson.

        * BuildSlaveSupport/build.webkit.org-config/public_html/LeaksViewer/RecentBuildsLoader.js:
        (RecentBuildsLoader.prototype.start): Relax a regex to gloss over differences in ORWT's vs.
        NRWT's leaks-related output (i.e., "M total leaks found!" vs. "M total leaks found for a
        total of N bytes!").

2011-10-31  Raphael Kubo da Costa  <kubo@profusion.mobi>

        [EFL] Rename ewk_view_setting_scripts_window_open_{get,set} after r93833
        https://bugs.webkit.org/show_bug.cgi?id=71228

        Reviewed by Antonio Gomes.

        * DumpRenderTree/efl/DumpRenderTreeChrome.cpp:
        (DumpRenderTreeChrome::createNewWindow):
        (DumpRenderTreeChrome::resetDefaultsToConsistentValues):

2011-10-31  Eric Seidel  <eric@webkit.org>

        webkitpy tests depend too much on the user's environment
        https://bugs.webkit.org/show_bug.cgi?id=71234

        Reviewed by Dirk Pranke.

        This change just makes a bunch of our older tests use
        more modern mocking to avoid trying to launch processes
        or read from the user's filesystem during unittesting.

        I found many of these by adding an assert in Executive.run_command
        that we were not unittesting.  I can't add that assert always
        as there are some valid uses of Executive during unittesting.