@@ -1,3 +1,15 @@
+2011-11-01  Jocelyn Turcotte  <jocelyn.turcotte@nokia.com>
+
+        check-webkit-style: Allow names starting with "_q_".
+        https://bugs.webkit.org/show_bug.cgi?id=70625
+
+        Reviewed by Tor Arne Vestbø.
+
+        Used by the Qt port as the standard prefix for private slots.
+
+        * Scripts/webkitpy/style/checkers/cpp.py:
+        * Scripts/webkitpy/style/checkers/cpp_unittest.py:
+
 2011-11-01  Simon Hausmann  <simon.hausmann@nokia.com>
 
         [Qt][WK2] Fix valgrind error about uninitialized variable
